Updated UserInput to match the plunker

--- a/basics-user-input/app/app.component.html
+++ b/basics-user-input/app/app.component.html
@@ -1,23 +1,22 @@
-<h1>User Input</h1>
+<p><click-me></click-me></p>
 
-<h2>Bind to click</h2>
-<click-me></click-me>
+<p><click-me2></click-me2></p>
 
-<h2>Bind to keyup</h2>
+<h4>Give me some keys!</h4>
+<div><key-up1></key-up1></div>
 
-<h3>Get user input from the $event object</h3>
-<key-up1></key-up1>
+<h4>keyup loop-back component</h4>
+<div><loop-back></loop-back></div>
 
-<h3>Get user input from a template reference variable</h3>
-<loop-back></loop-back>
+<h4>Give me some more keys!</h4>
+<div><key-up2></key-up2></div>
 
-<key-up2></key-up2>
+<h4>Type away! Press [enter] when done.</h4>
+<div><key-up3></key-up3></div>
 
-<h3>Key event filtering (with key.enter)</h3>
-<key-up3></key-up3>
+<h4>Type away! Press [enter] or click elsewhere when done.</h4>
+<div><key-up4></key-up4></div>
 
-<h3>On blur</h3>
-<key-up4></key-up4>
-
-<h2>Little Tour of Heroes</h2>
-<little-tour></little-tour>
+<h4>Little Tour of Heroes</h4>
+<p><i>Add a new hero</i></p>
+<div><little-tour></little-tour></div>
