--- a/basics-forms/app/hero-form.component.html
+++ b/basics-forms/app/hero-form.component.html
@@ -30,8 +30,8 @@
           Power is required
         </div>
       </div>
-      <button type="submit" class="btn btn-default"
-        [disabled]="!heroForm.form.valid">Submit</button>
+
+      <button type="submit" class="btn btn-default" [disabled]="!heroForm.form.valid">Submit</button>
       <button type="button" class="btn btn-default" (click)="newHero()">New Hero</button>
     </form>
   </div>
